releases/v0.3.3/_sources/observables.rst.txt
###################
List of Observables
###################


The following is a list of observables that is available in EOS v0.3.3.


*****************************************************
Observables in (semi)leptonic :math:`b`-hadron decays
*****************************************************
Observables in :math:`B^-\to \ell^-\bar\nu` decays
==================================================


.. _bunummtolnucocobr:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B_u->lnu::BR``
     - :math:`\mathcal{B}(B^- \to \ell^-\bar\nu)`
     - 



The option "l" selects the charged lepton flavour.



Observables in :math:`B\to \pi \ell^-\bar\nu` decays
====================================================


.. _bmmtopilnucocoaunfb:
.. _bmmtopilnucocoaunfbpoq2pc:
.. _bmmtopilnucocoaunl:
.. _bmmtopilnucocobr:
.. _bmmtopilnucocofunh:
.. _bmmtopilnucocoppoq2pc:
.. _bmmtopilnucocoppoq2unmin,q2unmaxpc:
.. _bmmtopilnucocorunpi:
.. _bmmtopilnucocorunpipoq2pc:
.. _bmmtopilnucocorunpiun0:
.. _bmmtopilnucocorunpiunp:
.. _bmmtopilnucocodbrsldq2:
.. _bmmtopilnucocozeta:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B->pilnu::A_FB``
     - :math:`A_{\text{FB}}(B\to \pi\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->pilnu::A_FB(q2)``
     - :math:`A_{\text{FB}}(B\to \pi\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->pilnu::BR``
     - :math:`\mathcal{B}(B\to\pi\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->pilnu::P(q2)``
     - :math:`dP(B\to\pi\ell^-\bar\nu)/dq^2`
     - ``q2``
   * - ``B->pilnu::P(q2_min,q2_max)``
     - :math:`P(B\to\pi\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->pilnu::R_pi``
     - :math:`R_{\pi}`
     - ``q2_tau_min``, ``q2_tau_max``
   * - ``B->pilnu::R_pi(q2)``
     - :math:`R_{\pi}(q^2)`
     - ``q2``
   * - ``B->pilnu::R_pi_0``
     - :math:`R_{\pi}`
     - ``q2_tau_min``, ``q2_tau_max``
   * - ``B->pilnu::R_pi_p``
     - :math:`R_{\pi}`
     - ``q2_tau_min``, ``q2_tau_max``
   * - ``B->pilnu::dBR/dq2``
     - :math:`d\mathcal{B}(B\to\pi\ell^-\bar\nu)/dq^2`
     - ``q2``



The option "l" selects the charged lepton flavour. The option "q" selects the spectator quark flavour. The option "form-factors" selects the form factor parametrization.



Observables in :math:`B\to \bar{D} \ell^-\bar\nu` decays
========================================================


.. _bmmtodlnucocoaunfb:
.. _bmmtodlnucocoaunfbpoq2pc:
.. _bmmtodlnucocoaunl:
.. _bmmtodlnucocobr:
.. _bmmtodlnucocoppowpc:
.. _bmmtodlnucocoppowunmin,wunmaxpc:
.. _bmmtodlnucocorund:
.. _bmmtodlnucocorundpoq2pc:
.. _bmmtodlnucocodbrsldq2:
.. _bmmtodlnucoconormbr:
.. _bmmtodlnucoconormdbrslds:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B->Dlnu::A_FB``
     - :math:`A_{\text{FB}}(B\to \bar{D}\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->Dlnu::A_FB(q2)``
     - :math:`A_{\text{FB}}(B\to \bar{D}\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->Dlnu::BR``
     - :math:`\mathcal{B}(B\to \bar{D}\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->Dlnu::R_D``
     - :math:`R_D`
     - ``q2_tau_min``, ``q2_tau_max``
   * - ``B->Dlnu::R_D(q2)``
     - :math:`R_D(q^2)`
     - ``q2``
   * - ``B->Dlnu::dBR/dq2``
     - :math:`d\mathcal{B}(B\to \bar{D}\ell^-\bar\nu)/dq^2`
     - ``q2``



The option "l" selects the charged lepton flavour. The option "q" selects the spectator quark flavour. The option "form-factors" selects the form factor parametrization.



Observables in :math:`B_s\to \bar{D_s} \ell^-\bar\nu` decays
============================================================


.. _bunsmmtodunslnucocoaunfb:
.. _bunsmmtodunslnucocoaunfbpoq2pc:
.. _bunsmmtodunslnucocoaunl:
.. _bunsmmtodunslnucocobr:
.. _bunsmmtodunslnucocoppowpc:
.. _bunsmmtodunslnucocoppowunmin,wunmaxpc:
.. _bunsmmtodunslnucocorunduns:
.. _bunsmmtodunslnucocorundunspoq2pc:
.. _bunsmmtodunslnucocodbrsldq2:
.. _bunsmmtodunslnucoconormbr:
.. _bunsmmtodunslnucoconormdbrslds:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B_s->D_slnu::A_FB``
     - :math:`A_{\text{FB}}(B_s\to \bar{D}_s\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_slnu::A_FB(q2)``
     - :math:`A_{\text{FB}}(B_s\to \bar{D}_s\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_slnu::BR``
     - :math:`\mathcal{B}(B_s\to \bar{D}_s\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_slnu::R_D_s``
     - :math:`R_D_s`
     - ``q2_tau_min``, ``q2_tau_max``
   * - ``B_s->D_slnu::R_D_s(q2)``
     - :math:`R_D_s(q^2)`
     - ``q2``
   * - ``B_s->D_slnu::dBR/dq2``
     - :math:`d\mathcal{B}(B_s\to \bar{D}_s\ell^-\bar\nu)/dq^2`
     - ``q2``



The option "l" selects the charged lepton flavour.The option "form-factors" selects the form factor parametrization.



Observables in :math:`B\to \bar{D}^* \ell^-\bar\nu` decays
==========================================================


.. _bmmtod^*lnucocoaun1c:
.. _bmmtod^*lnucocoaun1s:
.. _bmmtod^*lnucocoaun2c:
.. _bmmtod^*lnucocoaun2s:
.. _bmmtod^*lnucocoaun3:
.. _bmmtod^*lnucocoaun4:
.. _bmmtod^*lnucocoaun5:
.. _bmmtod^*lnucocoaun6c:
.. _bmmtod^*lnucocoaun6s:
.. _bmmtod^*lnucocoaun7:
.. _bmmtod^*lnucocoaun8:
.. _bmmtod^*lnucocoaun9:
.. _bmmtod^*lnucocoaunc^1:
.. _bmmtod^*lnucocoaunc^2:
.. _bmmtod^*lnucocoaunc^3:
.. _bmmtod^*lnucocoaunfb:
.. _bmmtod^*lnucocoaunfbpoq2pc:
.. _bmmtod^*lnucocoaunl:
.. _bmmtod^*lnucocoaunt:
.. _bmmtod^*lnucocoaunt^1:
.. _bmmtod^*lnucocoaunt^2:
.. _bmmtod^*lnucocoaunt^3:
.. _bmmtod^*lnucocoabarunfb:
.. _bmmtod^*lnucocobr:
.. _bmmtod^*lnucocobrbar:
.. _bmmtod^*lnucocodeltaaunfb:
.. _bmmtod^*lnucocodeltabr:
.. _bmmtod^*lnucocodeltafunl:
.. _bmmtod^*lnucocodeltaftildeunl:
.. _bmmtod^*lnucocodeltappowunmin,wunmaxpc:
.. _bmmtod^*lnucocodeltasun3:
.. _bmmtod^*lnucocofunl:
.. _bmmtod^*lnucocofbarunl:
.. _bmmtod^*lnucocoftildeunl:
.. _bmmtod^*lnucocoftildebarunl:
.. _bmmtod^*lnucocojun1c:
.. _bmmtod^*lnucocojun1cpoq2pc:
.. _bmmtod^*lnucocojun1s:
.. _bmmtod^*lnucocojun1spoq2pc:
.. _bmmtod^*lnucocojun2c:
.. _bmmtod^*lnucocojun2cpoq2pc:
.. _bmmtod^*lnucocojun2s:
.. _bmmtod^*lnucocojun2spoq2pc:
.. _bmmtod^*lnucocojun3:
.. _bmmtod^*lnucocojun3poq2pc:
.. _bmmtod^*lnucocojun4:
.. _bmmtod^*lnucocojun4poq2pc:
.. _bmmtod^*lnucocojun5:
.. _bmmtod^*lnucocojun5poq2pc:
.. _bmmtod^*lnucocojun6c:
.. _bmmtod^*lnucocojun6cpoq2pc:
.. _bmmtod^*lnucocojun6s:
.. _bmmtod^*lnucocojun6spoq2pc:
.. _bmmtod^*lnucocojun7:
.. _bmmtod^*lnucocojun7poq2pc:
.. _bmmtod^*lnucocojun8:
.. _bmmtod^*lnucocojun8poq2pc:
.. _bmmtod^*lnucocojun9:
.. _bmmtod^*lnucocojun9poq2pc:
.. _bmmtod^*lnucocoppowunmin,wunmaxpc:
.. _bmmtod^*lnucocopbarpowunmin,wunmaxpc:
.. _bmmtod^*lnucocorund^*:
.. _bmmtod^*lnucocorund^*poq2pc:
.. _bmmtod^*lnucocorun{d^*}^{eslmu}poq2pc:
.. _bmmtod^*lnucocosun1c:
.. _bmmtod^*lnucocosun1s:
.. _bmmtod^*lnucocosun2c:
.. _bmmtod^*lnucocosun2s:
.. _bmmtod^*lnucocosun3:
.. _bmmtod^*lnucocosun4:
.. _bmmtod^*lnucocosun5:
.. _bmmtod^*lnucocosun6c:
.. _bmmtod^*lnucocosun6s:
.. _bmmtod^*lnucocosun7:
.. _bmmtod^*lnucocosun8:
.. _bmmtod^*lnucocosun9:
.. _bmmtod^*lnucocosbarun3:
.. _bmmtod^*lnucocodbrsldq2:
.. _bmmtod^*lnucoconormbr:
.. _bmmtod^*lnucoconormdbrsldq2:
.. _bmmtodpilnucocoaunl:
.. _bmmtodpilnucocoppocundpc:
.. _bmmtodpilnucocoppocundunmin,cundunmaxpc:
.. _bmmtodpilnucocoppocunlpc:
.. _bmmtodpilnucocoppocunlunmin,cunlunmaxpc:
.. _bmmtodpilnucocoppochipc:
.. _bmmtodpilnucocoppochiunmin,chiunmaxpc:
.. _bmmtodpilnucocoppoq2pc:
.. _bmmtodpilnucocoppowpc:
.. _bmmtodpilnucocoppowunmin,wunmaxpc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B->D^*lnu::A_1c``
     - :math:`A_{1c}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_1s``
     - :math:`A_{1s}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_2c``
     - :math:`A_{2c}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_2s``
     - :math:`A_{2s}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_3``
     - :math:`A_{3}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_4``
     - :math:`A_{4}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_5``
     - :math:`A_{5}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_6c``
     - :math:`A_{6c}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_6s``
     - :math:`A_{6s}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_7``
     - :math:`A_{7}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_8``
     - :math:`A_{8}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_9``
     - :math:`A_{9}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_C^1``
     - :math:`A_{\text{C}}^1(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_C^2``
     - :math:`A_{\text{C}}^2(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_C^3``
     - :math:`A_{\text{C}}^3(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_FB``
     - :math:`A_{\text{FB}}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_FB(q2)``
     - :math:`A_{\text{FB}}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::A_T^1``
     - :math:`A_{\text{T}}^1(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_T^2``
     - :math:`A_{\text{T}}^2(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::A_T^3``
     - :math:`A_{\text{T}}^3(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::BR``
     - :math:`\mathcal{B}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::F_L``
     - :math:`F_{\text{L}}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::Ftilde_L``
     - :math:`\tilde{F}_{\text{L}}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_1c``
     - :math:`J_{1c}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_1c(q2)``
     - :math:`J_{1c}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::J_1s``
     - :math:`J_{1s}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_1s(q2)``
     - :math:`J_{1s}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::J_2c``
     - :math:`J_{2c}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_2c(q2)``
     - :math:`J_{2c}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::J_2s``
     - :math:`J_{2s}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_2s(q2)``
     - :math:`J_{2s}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::J_3``
     - :math:`J_{3}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_3(q2)``
     - :math:`J_{3}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::J_4``
     - :math:`J_{4}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_4(q2)``
     - :math:`J_{4}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::J_5``
     - :math:`J_{5}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_5(q2)``
     - :math:`J_{5}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::J_6c``
     - :math:`J_{6c}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_6c(q2)``
     - :math:`J_{6c}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::J_6s``
     - :math:`J_{6s}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_6s(q2)``
     - :math:`J_{6s}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::J_7``
     - :math:`J_{7}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_7(q2)``
     - :math:`J_{7}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::J_8``
     - :math:`J_{8}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_8(q2)``
     - :math:`J_{8}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::J_9``
     - :math:`J_{9}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::J_9(q2)``
     - :math:`J_{9}(B\to \bar{D}^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B->D^*lnu::R_D^*``
     - :math:`R_{D^*}`
     - ``q2_tau_min``, ``q2_tau_max``
   * - ``B->D^*lnu::R_D^*(q2)``
     - :math:`R_{D^*}^{\tau/\mu}(q^2)`
     - ``q2``
   * - ``B->D^*lnu::R_{D^*}^{e/mu}(q2)``
     - :math:`R_{D^*}^{e/\mu}(q^2)`
     - ``q2``
   * - ``B->D^*lnu::S_1c``
     - :math:`S_{1c}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::S_1s``
     - :math:`S_{1s}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::S_2c``
     - :math:`S_{2c}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::S_2s``
     - :math:`S_{2s}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::S_3``
     - :math:`S_{3}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::S_4``
     - :math:`S_{4}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::S_5``
     - :math:`S_{5}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::S_6c``
     - :math:`S_{6c}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::S_6s``
     - :math:`S_{6s}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::S_7``
     - :math:`S_{7}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::S_8``
     - :math:`S_{8}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::S_9``
     - :math:`S_{9}(B\to \bar{D}^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B->D^*lnu::dBR/dq2``
     - :math:`d\mathcal{B}(B\to \bar{D}^*\ell^-\bar\nu)/dq^2`
     - ``q2``



The option "l" selects the charged lepton flavour. The option "q" selects the spectator quark flavour. The option "form-factors" selects the form factor parametrization.



Observables in :math:`B_s\to \bar{K}^* \ell^-\bar\nu` decays
============================================================


.. _bunsmmtok^*lnucocoaunfb:
.. _bunsmmtok^*lnucocoaunfbpoq2pc:
.. _bunsmmtok^*lnucocoaunt^2:
.. _bunsmmtok^*lnucocoaunt^2poq2pc:
.. _bunsmmtok^*lnucocoaunt^3:
.. _bunsmmtok^*lnucocoaunt^3poq2pc:
.. _bunsmmtok^*lnucocoaunt^4:
.. _bunsmmtok^*lnucocoaunt^4poq2pc:
.. _bunsmmtok^*lnucocoaunt^5:
.. _bunsmmtok^*lnucocoaunt^5poq2pc:
.. _bunsmmtok^*lnucocoaunt^im:
.. _bunsmmtok^*lnucocoaunt^impoq2pc:
.. _bunsmmtok^*lnucocoaunt^re:
.. _bunsmmtok^*lnucocoaunt^repoq2pc:
.. _bunsmmtok^*lnucocobr:
.. _bunsmmtok^*lnucocofunl:
.. _bunsmmtok^*lnucocofunlpoq2pc:
.. _bunsmmtok^*lnucocofunt:
.. _bunsmmtok^*lnucocofuntpoq2pc:
.. _bunsmmtok^*lnucocofunlongpoq2pc:
.. _bunsmmtok^*lnucocofunparapoq2pc:
.. _bunsmmtok^*lnucocofunperppoq2pc:
.. _bunsmmtok^*lnucocohunt^1:
.. _bunsmmtok^*lnucocohunt^1poq2pc:
.. _bunsmmtok^*lnucocohunt^2:
.. _bunsmmtok^*lnucocohunt^2poq2pc:
.. _bunsmmtok^*lnucocohunt^3:
.. _bunsmmtok^*lnucocohunt^3poq2pc:
.. _bunsmmtok^*lnucocohunt^4:
.. _bunsmmtok^*lnucocohunt^4poq2pc:
.. _bunsmmtok^*lnucocohunt^5:
.. _bunsmmtok^*lnucocohunt^5poq2pc:
.. _bunsmmtok^*lnucocorunlong:
.. _bunsmmtok^*lnucocorunpara:
.. _bunsmmtok^*lnucocorunperp:
.. _bunsmmtok^*lnucocoshatun1c:
.. _bunsmmtok^*lnucocoshatun1s:
.. _bunsmmtok^*lnucocoshatun2c:
.. _bunsmmtok^*lnucocoshatun2s:
.. _bunsmmtok^*lnucocoshatun3:
.. _bunsmmtok^*lnucocoshatun4:
.. _bunsmmtok^*lnucocoshatun5:
.. _bunsmmtok^*lnucocoshatun6s:
.. _bunsmmtok^*lnucocodbrslds:
.. _bunsmmtok^*lnucocod^4gamma:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B_s->K^*lnu::dBR/ds``
     - :math:`d\mathcal{B}(B_s\to \bar{K}^*\ell^-\bar\nu)/dq^2`
     - ``q2``



The option "l" selects the charged lepton flavour. The option "form-factors" selects the form factor parametrization.



Observables in :math:`\bar{B}_s\to D_s^* \ell^-\bar\nu` decays
==============================================================


.. _bunsmmtoduns^*lnucocoaunc^1:
.. _bunsmmtoduns^*lnucocoaunc^2:
.. _bunsmmtoduns^*lnucocoaunc^3:
.. _bunsmmtoduns^*lnucocoaunfb:
.. _bunsmmtoduns^*lnucocoaunfbpoq2pc:
.. _bunsmmtoduns^*lnucocoaunl:
.. _bunsmmtoduns^*lnucocoaunt:
.. _bunsmmtoduns^*lnucocoaunt^1:
.. _bunsmmtoduns^*lnucocoaunt^2:
.. _bunsmmtoduns^*lnucocoaunt^3:
.. _bunsmmtoduns^*lnucocobr:
.. _bunsmmtoduns^*lnucocofunl:
.. _bunsmmtoduns^*lnucocojun1c:
.. _bunsmmtoduns^*lnucocojun1cpoq2pc:
.. _bunsmmtoduns^*lnucocojun1s:
.. _bunsmmtoduns^*lnucocojun1spoq2pc:
.. _bunsmmtoduns^*lnucocojun2c:
.. _bunsmmtoduns^*lnucocojun2cpoq2pc:
.. _bunsmmtoduns^*lnucocojun2s:
.. _bunsmmtoduns^*lnucocojun2spoq2pc:
.. _bunsmmtoduns^*lnucocojun3:
.. _bunsmmtoduns^*lnucocojun3poq2pc:
.. _bunsmmtoduns^*lnucocojun4:
.. _bunsmmtoduns^*lnucocojun4poq2pc:
.. _bunsmmtoduns^*lnucocojun5:
.. _bunsmmtoduns^*lnucocojun5poq2pc:
.. _bunsmmtoduns^*lnucocojun6c:
.. _bunsmmtoduns^*lnucocojun6cpoq2pc:
.. _bunsmmtoduns^*lnucocojun6s:
.. _bunsmmtoduns^*lnucocojun6spoq2pc:
.. _bunsmmtoduns^*lnucocojun7:
.. _bunsmmtoduns^*lnucocojun7poq2pc:
.. _bunsmmtoduns^*lnucocojun8:
.. _bunsmmtoduns^*lnucocojun8poq2pc:
.. _bunsmmtoduns^*lnucocojun9:
.. _bunsmmtoduns^*lnucocojun9poq2pc:
.. _bunsmmtoduns^*lnucocoppowunmin,wunmaxpc:
.. _bunsmmtoduns^*lnucocorunduns^*:
.. _bunsmmtoduns^*lnucocorunduns^*poq2pc:
.. _bunsmmtoduns^*lnucocodbrsldq2:
.. _bunsmmtoduns^*lnucoconormbr:
.. _bunsmmtoduns^*lnucoconormdbrsldq2:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B_s->D_s^*lnu::A_C^1``
     - :math:`A_{\text{C}}^1(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::A_C^2``
     - :math:`A_{\text{C}}^2(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::A_C^3``
     - :math:`A_{\text{C}}^3(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::A_FB``
     - :math:`A_{\text{FB}}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::A_FB(q2)``
     - :math:`A_{\text{FB}}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::A_T^1``
     - :math:`A_{\text{T}}^1(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::A_T^2``
     - :math:`A_{\text{T}}^2(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::A_T^3``
     - :math:`A_{\text{T}}^3(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::BR``
     - :math:`\mathcal{B}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::F_L``
     - :math:`F_{\text{L}}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_1c``
     - :math:`J_{1c}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_1c(q2)``
     - :math:`J_{1c}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::J_1s``
     - :math:`J_{1s}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_1s(q2)``
     - :math:`J_{1s}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::J_2c``
     - :math:`J_{2c}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_2c(q2)``
     - :math:`J_{2c}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::J_2s``
     - :math:`J_{2s}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_2s(q2)``
     - :math:`J_{2s}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::J_3``
     - :math:`J_{3}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_3(q2)``
     - :math:`J_{3}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::J_4``
     - :math:`J_{4}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_4(q2)``
     - :math:`J_{4}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::J_5``
     - :math:`J_{5}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_5(q2)``
     - :math:`J_{5}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::J_6c``
     - :math:`J_{6c}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_6c(q2)``
     - :math:`J_{6c}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::J_6s``
     - :math:`J_{6s}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_6s(q2)``
     - :math:`J_{6s}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::J_7``
     - :math:`J_{7}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_7(q2)``
     - :math:`J_{7}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::J_8``
     - :math:`J_{8}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_8(q2)``
     - :math:`J_{8}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::J_9``
     - :math:`J_{9}(B_s\to \bar{D}_s^*\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``B_s->D_s^*lnu::J_9(q2)``
     - :math:`J_{9}(B_s\to \bar{D}_s^*\ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::R_D_s^*``
     - :math:`R_{D_s^*}`
     - ``q2_tau_min``, ``q2_tau_max``
   * - ``B_s->D_s^*lnu::R_D_s^*(q2)``
     - :math:`R_{D_s^*}(q^2)`
     - ``q2``
   * - ``B_s->D_s^*lnu::dBR/dq2``
     - :math:`d\mathcal{B}(B_s\to \bar{D}_s^*\ell^-\bar\nu)/dq^2`
     - ``q2``



The option "l" selects the charged lepton flavour.The option "form-factors" selects the form factor parametrization.



Observables in :math:`\Lambda_b\to \Lambda_c \ell^-\bar\nu` decays
==================================================================


.. _lambdaunbmmtolambdauncpo2595pclnucocoaunfb:
.. _lambdaunbmmtolambdauncpo2595pclnucocobr:
.. _lambdaunbmmtolambdauncpo2595pclnucocogammaunnormalizedpoq2unmin,q2unmaxpc:
.. _lambdaunbmmtolambdauncpo2595pclnucocorunlambdauncpo2595pc:
.. _lambdaunbmmtolambdauncpo2595pclnucocorunlambdauncpo2595pcpoq2pc:
.. _lambdaunbmmtolambdauncpo2595pclnucocodbrslds:
.. _lambdaunbmmtolambdauncpo2595pclnucocodbrsldsdthetaunl:
.. _lambdaunbmmtolambdauncpo2625pclnucocoaunfb:
.. _lambdaunbmmtolambdauncpo2625pclnucocoaunfbpoq2pc:
.. _lambdaunbmmtolambdauncpo2625pclnucocobr:
.. _lambdaunbmmtolambdauncpo2625pclnucocogammaunnormalizedpoq2unmin,q2unmaxpc:
.. _lambdaunbmmtolambdauncpo2625pclnucocorunlambdauncpo2625pc:
.. _lambdaunbmmtolambdauncpo2625pclnucocorunlambdauncpo2625pcpoq2pc:
.. _lambdaunbmmtolambdauncpo2625pclnucocodbrslds:
.. _lambdaunbmmtolambdauncpo2625pclnucocodbrsldsdthetaunl:
.. _lambdaunbmmtolambdaunclnucocoaunfb^c:
.. _lambdaunbmmtolambdaunclnucocoaunfb^cpoq2pc:
.. _lambdaunbmmtolambdaunclnucocoaunfb^h:
.. _lambdaunbmmtolambdaunclnucocoaunfb^hpoq2pc:
.. _lambdaunbmmtolambdaunclnucocoaunfb^l:
.. _lambdaunbmmtolambdaunclnucocoaunfb^lpoq2pc:
.. _lambdaunbmmtolambdaunclnucocobr:
.. _lambdaunbmmtolambdaunclnucocofun0:
.. _lambdaunbmmtolambdaunclnucocofun0poq2pc:
.. _lambdaunbmmtolambdaunclnucocokun1c:
.. _lambdaunbmmtolambdaunclnucocokun1cc:
.. _lambdaunbmmtolambdaunclnucocokun1ss:
.. _lambdaunbmmtolambdaunclnucocokun2c:
.. _lambdaunbmmtolambdaunclnucocokun2cc:
.. _lambdaunbmmtolambdaunclnucocokun2ss:
.. _lambdaunbmmtolambdaunclnucocokun3s:
.. _lambdaunbmmtolambdaunclnucocokun3sc:
.. _lambdaunbmmtolambdaunclnucocokun4s:
.. _lambdaunbmmtolambdaunclnucocokun4sc:
.. _lambdaunbmmtolambdaunclnucocorpoaunfb^hpc:
.. _lambdaunbmmtolambdaunclnucocorpoaunfb^hpcpoq2pc:
.. _lambdaunbmmtolambdaunclnucocorpolambdauncpc:
.. _lambdaunbmmtolambdaunclnucocodbrsldq2:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``Lambda_b->Lambda_c(2595)lnu::BR``
     - :math:`\mathcal{B}(\Lambda_b\to\Lambda_c(2595) \ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_c(2595)lnu::R_Lambda_c(2595)``
     - :math:`R_{\Lambda_c(2595}`
     - ``q2_tau_min``, ``q2_tau_max``
   * - ``Lambda_b->Lambda_c(2595)lnu::R_Lambda_c(2595)(q2)``
     - :math:`R_{\Lambda_c(2595}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_c(2625)lnu::BR``
     - :math:`\mathcal{B}(\Lambda_b\to\Lambda_c(2625) \ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_c(2625)lnu::R_Lambda_c(2625)``
     - :math:`R_{\Lambda_c(2625}`
     - ``q2_tau_min``, ``q2_tau_max``
   * - ``Lambda_b->Lambda_c(2625)lnu::R_Lambda_c(2625)(q2)``
     - :math:`R_{\Lambda_c(2625}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_clnu::A_FB^c(q2)``
     - :math:`A_{\text{FB}}^{h\ell}(\Lambda_b\to\Lambda_c \ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_clnu::A_FB^h(q2)``
     - :math:`A_{\text{FB}}^h(\Lambda_b\to\Lambda_c \ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_clnu::A_FB^l(q2)``
     - :math:`A_{\text{FB}}^\ell(\Lambda_b\to\Lambda_c \ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_clnu::BR``
     - :math:`\mathcal{B}(\Lambda_b\to\Lambda_c \ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_clnu::F_0(q2)``
     - :math:`F_0(\Lambda_b\to\Lambda_c \ell^-\bar\nu)(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_clnu::K_1c``
     - :math:`K_{1c}(\Lambda_b\to\Lambda_c(\to \Lambda\pi)\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_clnu::K_1cc``
     - :math:`K_{1cc}(\Lambda_b\to\Lambda_c(\to \Lambda\pi)\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_clnu::K_1ss``
     - :math:`K_{1ss}(\Lambda_b\to\Lambda_c(\to \Lambda\pi)\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_clnu::K_2c``
     - :math:`K_{2c}(\Lambda_b\to\Lambda_c(\to \Lambda\pi)\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_clnu::K_2cc``
     - :math:`K_{2cc}(\Lambda_b\to\Lambda_c(\to \Lambda\pi)\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_clnu::K_2ss``
     - :math:`K_{2ss}(\Lambda_b\to\Lambda_c(\to \Lambda\pi)\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_clnu::K_3s``
     - :math:`K_{3s}(\Lambda_b\to\Lambda_c(\to \Lambda\pi)\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_clnu::K_3sc``
     - :math:`K_{3sc}(\Lambda_b\to\Lambda_c(\to \Lambda\pi)\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_clnu::K_4s``
     - :math:`K_{4s}(\Lambda_b\to\Lambda_c(\to \Lambda\pi)\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_clnu::K_4sc``
     - :math:`K_{4sc}(\Lambda_b\to\Lambda_c(\to \Lambda\pi)\ell^-\bar\nu)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambda_clnu::R(A_FB^h)``
     - :math:`R(A_{\text{FB}}^{\Lambda_c})`
     - ``q2_tau_min``, ``q2_tau_max``
   * - ``Lambda_b->Lambda_clnu::R(A_FB^h)(q2)``
     - :math:`R(A_{\text{FB}}^{\Lambda_c})(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_clnu::R(Lambda_c)``
     - :math:`R(\Lambda_c)`
     - ``q2_tau_min``, ``q2_tau_max``
   * - ``Lambda_b->Lambda_clnu::dBR/dq2``
     - :math:`d\mathcal{B}(\Lambda_b\to\Lambda_c \ell^-\bar\nu)/dq^2`
     - ``q2``



The option "l" selects the charged lepton flavour. The option "form-factors" selects the form factor parametrization.



Miscellaneous matrix elements
=============================


.. _bcocomunb^*mmmunb:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables










************************************************************************
Observables in rare (semi)leptonic and radiative :math:`b`-hadron decays
************************************************************************
Observables in :math:`B_q \to \ell^+\ell^-` decays
==================================================


.. _bunqmmtollcocoaundeltagamma:
.. _bunqmmtollcocobr:
.. _bunqmmtollcocobratuntagged:
.. _bunqmmtollcocos:
.. _bunqmmtollcocoeffunlifetime:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B_q->ll::A_DeltaGamma``
     - :math:`\mathcal{A}_{\Delta\Gamma}(B_q \to \ell^+\ell^-)`
     - 
   * - ``B_q->ll::BR``
     - :math:`\mathcal{B}(B_q \to \ell^+\ell^-)`
     - 
   * - ``B_q->ll::BR@Untagged``
     - :math:`\left\langle\mathcal{B}(B_q \to \ell^+\ell^-)\right\rangle`
     - 
   * - ``B_q->ll::S``
     - :math:`\mathcal{S}(B_q \to \ell^+\ell^-)`
     - 
   * - ``B_q->ll::eff_lifetime``
     - :math:`\langle\tau\rangle(B_q \to \ell^+\ell^-)`
     - 



The option "l" selects the charged lepton flavour. The option "q" selects the spectator quark flavour.



Observables in :math:`B_q \to P \ell^+\ell^-` decays
====================================================


.. _bmmtokllcocoauncpatlargerecoil:
.. _bmmtokllcocoauncpatlowrecoil:
.. _bmmtokllcocoaunfbpoq2pcatlargerecoil:
.. _bmmtokllcocoaunfbpoq2pcatlowrecoil:
.. _bmmtokllcocoaunfbatlargerecoil:
.. _bmmtokllcocoaunfbatlowrecoil:
.. _bmmtokllcocoaunfbavgatlargerecoil:
.. _bmmtokllcocoaunfbavgatlowrecoil:
.. _bmmtokllcocobratlargerecoil:
.. _bmmtokllcocobratlowrecoil:
.. _bmmtokllcocobravgatlargerecoil:
.. _bmmtokllcocobravgatlowrecoil:
.. _bmmtokllcocofunhpoq2pcatlargerecoil:
.. _bmmtokllcocofunhpoq2pcatlowrecoil:
.. _bmmtokllcocofunhatlargerecoil:
.. _bmmtokllcocofunhatlowrecoil:
.. _bmmtokllcocofunhavgatlargerecoil:
.. _bmmtokllcocofunhavgatlowrecoil:
.. _bmmtokllcocogammaatlargerecoil:
.. _bmmtokllcocogammaatlowrecoil:
.. _bmmtokllcocoim{c7eff}atlowrecoil:
.. _bmmtokllcocoim{c9eff}atlowrecoil:
.. _bmmtokllcocorunkpoq2pcatlargerecoil:
.. _bmmtokllcocorunkpoq2pcatlowrecoil:
.. _bmmtokllcocorunkatlargerecoil:
.. _bmmtokllcocorunkatlowrecoil:
.. _bmmtokllcocore{c7eff}atlowrecoil:
.. _bmmtokllcocore{c9eff}atlowrecoil:
.. _bmmtokllcocoaunlatlargerecoil:
.. _bmmtokllcocoaunlatlowrecoil:
.. _bmmtokllcocobunlatlargerecoil:
.. _bmmtokllcocobunlatlowrecoil:
.. _bmmtokllcococunlatlargerecoil:
.. _bmmtokllcococunlatlowrecoil:
.. _bmmtokllcocodbrsldsatlargerecoil:
.. _bmmtokllcocodbrsldsatlowrecoil:
.. _bmmtokllcocod^2gammaatlargerecoil:
.. _bmmtokllcocod^2gammaatlowrecoil:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B->Kll::A_CP@LargeRecoil``
     - :math:`A_\text{CP}(\bar{B}\to \bar{K}\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``B->Kll::A_FB(q2)@LargeRecoil``
     - :math:`A_\text{FB}(\bar{B}\to \bar{K}\ell^+\ell^-)(q^2)`
     - ``q2``
   * - ``B->Kll::A_FB@LargeRecoil``
     - :math:`A_\text{FB}(\bar{B}\to \bar{K}\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``B->Kll::BR@LargeRecoil``
     - :math:`\mathcal{B}(\bar{B}\to \bar{K}\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``B->Kll::F_H(q2)@LargeRecoil``
     - :math:`F_\text{H}(\bar{B}\to \bar{K}\ell^+\ell^-)(q^2)`
     - ``q2``
   * - ``B->Kll::F_H@LargeRecoil``
     - :math:`F_\text{H}(\bar{B}\to \bar{K}\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``B->Kll::R_K(q2)@LargeRecoil``
     - :math:`R_K(q^2)`
     - ``q2``
   * - ``B->Kll::R_K@LargeRecoil``
     - :math:`R_K`
     - ``q2_min``, ``q2_max``
   * - ``B->Kll::dBR/ds@LargeRecoil``
     - :math:`d\mathcal{B}(\bar{B}\to \bar{K}\ell^+\ell^-)/dq^2`
     - ``q2``
   * - ``B->Kll::d^2Gamma@LargeRecoil``
     - :math:`d^2\mathcal{\Gamma(\bar{B}\to \bar{K}\ell^+\ell^-)}/(dq^2\, d\cos\theta_\ell)`
     - ``s``, ``cos(theta_l)``



The option "l" selects the charged lepton flavour. The option "q" selects the spectator quark flavour.



Observables in :math:`B_q \to V gamma` decays
=============================================


.. _bmmtok^*gammacocoauncp:
.. _bmmtok^*gammacocoauni:
.. _bmmtok^*gammacocobr:
.. _bmmtok^*gammacocobravg:
.. _bmmtok^*gammacococunk^*gamma:
.. _bmmtok^*gammacocosunk^*gamma:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables



The option "l" selects the charged lepton flavour. The option "q" selects the spectator quark flavour.



Observables in :math:`B_q \to V \ell^+\ell^-` decays
====================================================


.. _bmmtok^*llcocoaun9atlargerecoil:
.. _bmmtok^*llcocoaun9atlowrecoil:
.. _bmmtok^*llcocoauncpatlargerecoil:
.. _bmmtok^*llcocoauncpatlowrecoil:
.. _bmmtok^*llcocoaunfbpoq2pcatlargerecoil:
.. _bmmtok^*llcocoaunfbpoq2pcatlowrecoil:
.. _bmmtok^*llcocoaunfbatlargerecoil:
.. _bmmtok^*llcocoaunfbatlowrecoil:
.. _bmmtok^*llcocoaunfbavgatlargerecoil:
.. _bmmtok^*llcocoaunfbavgatlowrecoil:
.. _bmmtok^*llcocoaunipoq2pcatlargerecoil:
.. _bmmtok^*llcocoaunt^2poq2pcatlargerecoil:
.. _bmmtok^*llcocoaunt^2poq2pcatlowrecoil:
.. _bmmtok^*llcocoaunt^2atlargerecoil:
.. _bmmtok^*llcocoaunt^2atlowrecoil:
.. _bmmtok^*llcocoaunt^2avgatlargerecoil:
.. _bmmtok^*llcocoaunt^2avgatlowrecoil:
.. _bmmtok^*llcocoaunt^3poq2pcatlargerecoil:
.. _bmmtok^*llcocoaunt^3poq2pcatlowrecoil:
.. _bmmtok^*llcocoaunt^3atlargerecoil:
.. _bmmtok^*llcocoaunt^3atlowrecoil:
.. _bmmtok^*llcocoaunt^4poq2pcatlargerecoil:
.. _bmmtok^*llcocoaunt^4poq2pcatlowrecoil:
.. _bmmtok^*llcocoaunt^4atlargerecoil:
.. _bmmtok^*llcocoaunt^4atlowrecoil:
.. _bmmtok^*llcocoaunt^5poq2pcatlargerecoil:
.. _bmmtok^*llcocoaunt^5poq2pcatlowrecoil:
.. _bmmtok^*llcocoaunt^5atlargerecoil:
.. _bmmtok^*llcocoaunt^5atlowrecoil:
.. _bmmtok^*llcocoaunt^impoq2pcatlargerecoil:
.. _bmmtok^*llcocoaunt^impoq2pcatlowrecoil:
.. _bmmtok^*llcocoaunt^imatlargerecoil:
.. _bmmtok^*llcocoaunt^imatlowrecoil:
.. _bmmtok^*llcocoaunt^repoq2pcatlargerecoil:
.. _bmmtok^*llcocoaunt^repoq2pcatlowrecoil:
.. _bmmtok^*llcocoaunt^reatlargerecoil:
.. _bmmtok^*llcocoaunt^reatlowrecoil:
.. _bmmtok^*llcocoabarunfbatlowrecoil:
.. _bmmtok^*llcocobratlargerecoil:
.. _bmmtok^*llcocobratlowrecoil:
.. _bmmtok^*llcocobravgatlargerecoil:
.. _bmmtok^*llcocobravgatlowrecoil:
.. _bmmtok^*llcocodun4poq2pcatlargerecoil:
.. _bmmtok^*llcocodun4atlargerecoil:
.. _bmmtok^*llcocodun5poq2pcatlargerecoil:
.. _bmmtok^*llcocodun5atlargerecoil:
.. _bmmtok^*llcocodun6spoq2pcatlargerecoil:
.. _bmmtok^*llcocodun6satlargerecoil:
.. _bmmtok^*llcocofunlpoq2pcatlargerecoil:
.. _bmmtok^*llcocofunlpoq2pcatlowrecoil:
.. _bmmtok^*llcocofunlatlargerecoil:
.. _bmmtok^*llcocofunlatlowrecoil:
.. _bmmtok^*llcocofunlavgatlargerecoil:
.. _bmmtok^*llcocofunlavgatlowrecoil:
.. _bmmtok^*llcocofuntpoq2pcatlargerecoil:
.. _bmmtok^*llcocofuntpoq2pcatlowrecoil:
.. _bmmtok^*llcocofuntatlargerecoil:
.. _bmmtok^*llcocofuntatlowrecoil:
.. _bmmtok^*llcocofuntavgatlargerecoil:
.. _bmmtok^*llcocofuntavgatlowrecoil:
.. _bmmtok^*llcocogammappgammabaratlowrecoil:
.. _bmmtok^*llcocogammammgammabaratlowrecoil:
.. _bmmtok^*llcocogammaatlargerecoil:
.. _bmmtok^*llcocohunt^1poq2pcatlargerecoil:
.. _bmmtok^*llcocohunt^1poq2pcatlowrecoil:
.. _bmmtok^*llcocohunt^1atlargerecoil:
.. _bmmtok^*llcocohunt^1atlowrecoil:
.. _bmmtok^*llcocohunt^2poq2pcatlargerecoil:
.. _bmmtok^*llcocohunt^2poq2pcatlowrecoil:
.. _bmmtok^*llcocohunt^2atlargerecoil:
.. _bmmtok^*llcocohunt^2atlowrecoil:
.. _bmmtok^*llcocohunt^3poq2pcatlargerecoil:
.. _bmmtok^*llcocohunt^3poq2pcatlowrecoil:
.. _bmmtok^*llcocohunt^3atlargerecoil:
.. _bmmtok^*llcocohunt^3atlowrecoil:
.. _bmmtok^*llcocohunt^4poq2pcatlargerecoil:
.. _bmmtok^*llcocohunt^4poq2pcatlowrecoil:
.. _bmmtok^*llcocohunt^4atlargerecoil:
.. _bmmtok^*llcocohunt^4atlowrecoil:
.. _bmmtok^*llcocohunt^5poq2pcatlargerecoil:
.. _bmmtok^*llcocohunt^5poq2pcatlowrecoil:
.. _bmmtok^*llcocohunt^5atlargerecoil:
.. _bmmtok^*llcocohunt^5atlowrecoil:
.. _bmmtok^*llcocoim{cun9^eff}poq2pcatlowrecoil:
.. _bmmtok^*llcocoim{y}poq2pcatlowrecoil:
.. _bmmtok^*llcocojun1cpoq2pcatlargerecoil:
.. _bmmtok^*llcocojun1cpoq2pcatlowrecoil:
.. _bmmtok^*llcocojun1catlargerecoil:
.. _bmmtok^*llcocojun1catlowrecoil:
.. _bmmtok^*llcocojun1spoq2pcatlargerecoil:
.. _bmmtok^*llcocojun1spoq2pcatlowrecoil:
.. _bmmtok^*llcocojun1satlargerecoil:
.. _bmmtok^*llcocojun1satlowrecoil:
.. _bmmtok^*llcocojun2cpoq2pcatlargerecoil:
.. _bmmtok^*llcocojun2cpoq2pcatlowrecoil:
.. _bmmtok^*llcocojun2catlargerecoil:
.. _bmmtok^*llcocojun2catlowrecoil:
.. _bmmtok^*llcocojun2spoq2pcatlargerecoil:
.. _bmmtok^*llcocojun2spoq2pcatlowrecoil:
.. _bmmtok^*llcocojun2satlargerecoil:
.. _bmmtok^*llcocojun2satlowrecoil:
.. _bmmtok^*llcocojun3poq2pcatlargerecoil:
.. _bmmtok^*llcocojun3poq2pcatlowrecoil:
.. _bmmtok^*llcocojun3atlargerecoil:
.. _bmmtok^*llcocojun3atlowrecoil:
.. _bmmtok^*llcocojun3normpoq2pcatlargerecoil:
.. _bmmtok^*llcocojun3normpoq2pcatlowrecoil:
.. _bmmtok^*llcocojun3normatlargerecoil:
.. _bmmtok^*llcocojun3normatlowrecoil:
.. _bmmtok^*llcocojun3normavgpoq2pcatlargerecoil:
.. _bmmtok^*llcocojun3normavgpoq2pcatlowrecoil:
.. _bmmtok^*llcocojun3normavgatlargerecoil:
.. _bmmtok^*llcocojun3normavgatlowrecoil:
.. _bmmtok^*llcocojun4poq2pcatlargerecoil:
.. _bmmtok^*llcocojun4poq2pcatlowrecoil:
.. _bmmtok^*llcocojun4atlargerecoil:
.. _bmmtok^*llcocojun4atlowrecoil:
.. _bmmtok^*llcocojun5poq2pcatlargerecoil:
.. _bmmtok^*llcocojun5poq2pcatlowrecoil:
.. _bmmtok^*llcocojun5atlargerecoil:
.. _bmmtok^*llcocojun5atlowrecoil:
.. _bmmtok^*llcocojun6cpoq2pcatlargerecoil:
.. _bmmtok^*llcocojun6cpoq2pcatlowrecoil:
.. _bmmtok^*llcocojun6catlargerecoil:
.. _bmmtok^*llcocojun6catlowrecoil:
.. _bmmtok^*llcocojun6spoq2pcatlargerecoil:
.. _bmmtok^*llcocojun6spoq2pcatlowrecoil:
.. _bmmtok^*llcocojun6satlargerecoil:
.. _bmmtok^*llcocojun6satlowrecoil:
.. _bmmtok^*llcocojun7poq2pcatlargerecoil:
.. _bmmtok^*llcocojun7poq2pcatlowrecoil:
.. _bmmtok^*llcocojun7atlargerecoil:
.. _bmmtok^*llcocojun7atlowrecoil:
.. _bmmtok^*llcocojun8poq2pcatlargerecoil:
.. _bmmtok^*llcocojun8poq2pcatlowrecoil:
.. _bmmtok^*llcocojun8atlargerecoil:
.. _bmmtok^*llcocojun8atlowrecoil:
.. _bmmtok^*llcocojun9poq2pcatlargerecoil:
.. _bmmtok^*llcocojun9poq2pcatlowrecoil:
.. _bmmtok^*llcocojun9atlargerecoil:
.. _bmmtok^*llcocojun9atlowrecoil:
.. _bmmtok^*llcocojun9normpoq2pcatlargerecoil:
.. _bmmtok^*llcocojun9normpoq2pcatlowrecoil:
.. _bmmtok^*llcocojun9normatlargerecoil:
.. _bmmtok^*llcocojun9normatlowrecoil:
.. _bmmtok^*llcocojun9normavgpoq2pcatlargerecoil:
.. _bmmtok^*llcocojun9normavgpoq2pcatlowrecoil:
.. _bmmtok^*llcocojun9normavgatlargerecoil:
.. _bmmtok^*llcocojun9normavgatlowrecoil:
.. _bmmtok^*llcocop'un4poq2pcatlargerecoil:
.. _bmmtok^*llcocop'un4poq2pcatlowrecoil:
.. _bmmtok^*llcocop'un4atlargerecoil:
.. _bmmtok^*llcocop'un4atlowrecoil:
.. _bmmtok^*llcocop'un5poq2pcatlargerecoil:
.. _bmmtok^*llcocop'un5poq2pcatlowrecoil:
.. _bmmtok^*llcocop'un5atlargerecoil:
.. _bmmtok^*llcocop'un5atlowrecoil:
.. _bmmtok^*llcocop'un6poq2pcatlargerecoil:
.. _bmmtok^*llcocop'un6poq2pcatlowrecoil:
.. _bmmtok^*llcocop'un6atlargerecoil:
.. _bmmtok^*llcocop'un6atlowrecoil:
.. _bmmtok^*llcocorunk^*poq2pcatlargerecoil:
.. _bmmtok^*llcocorunk^*atlargerecoil:
.. _bmmtok^*llcocore{cun9^eff}poq2pcatlowrecoil:
.. _bmmtok^*llcocore{y}poq2pcatlowrecoil:
.. _bmmtok^*llcocosun3atlargerecoil:
.. _bmmtok^*llcocosun3atlowrecoil:
.. _bmmtok^*llcocosun4atlargerecoil:
.. _bmmtok^*llcocosun4atlowrecoil:
.. _bmmtok^*llcocosun5atlargerecoil:
.. _bmmtok^*llcocosun5atlowrecoil:
.. _bmmtok^*llcocosun7atlargerecoil:
.. _bmmtok^*llcocosun7atlowrecoil:
.. _bmmtok^*llcocosun8atlargerecoil:
.. _bmmtok^*llcocosun8atlowrecoil:
.. _bmmtok^*llcocosun9atlargerecoil:
.. _bmmtok^*llcocosun9atlowrecoil:
.. _bmmtok^*llcocoauncp^1poq2pcatlowrecoil:
.. _bmmtok^*llcocoauncp^1atlowrecoil:
.. _bmmtok^*llcocoauncp^2poq2pcatlowrecoil:
.. _bmmtok^*llcocoauncp^2atlowrecoil:
.. _bmmtok^*llcocoauncp^3poq2pcatlowrecoil:
.. _bmmtok^*llcocoauncp^3atlowrecoil:
.. _bmmtok^*llcocoauncp^mixpoq2pcatlowrecoil:
.. _bmmtok^*llcocodbrsldsatlargerecoil:
.. _bmmtok^*llcocodbrsldsatlowrecoil:
.. _bmmtok^*llcocod^4gammaatlargerecoil:
.. _bmmtok^*llcocod^4gammaatlowrecoil:
.. _bmmtok^*llcoconaunfbatlowrecoil:
.. _bmmtok^*llcoconaunt^2atlowrecoil:
.. _bmmtok^*llcoconaunt^3atlowrecoil:
.. _bmmtok^*llcoconaunt^4atlowrecoil:
.. _bmmtok^*llcoconfunlatlowrecoil:
.. _bmmtok^*llcoconhunt^1atlowrecoil:
.. _bmmtok^*llcoconhunt^2atlowrecoil:
.. _bmmtok^*llcoconhunt^3atlowrecoil:
.. _bmmtok^*llcocorhoun1poq2pcatlowrecoil:
.. _bmmtok^*llcocorhoun2poq2pcatlowrecoil:
.. _bmmtok^*llcocosun0^aunfbatlargerecoil:
.. _bmmtok^*llcocoxiunparapoq2pcatlargerecoil:
.. _bmmtok^*llcocoxiunperppoq2pcatlargerecoil:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables



The option "l" selects the charged lepton flavour. The option "q" selects the spectator quark flavour.



Observables in :math:`B_q \to P` decays
=======================================


.. _bmmtokcocoabsunhunpluspoq2pc:
.. _bmmtokcocoabsunhhatunpluspoq2pc:
.. _bmmtokcocoimunhunpluspoq2pc:
.. _bmmtokcocoimunhhatunpluspoq2pc:
.. _bmmtokcocoreunhunpluspoq2pc:
.. _bmmtokcocoreunhhatunpluspoq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables



The option "q" selects the spectator quark flavour.



Observables in :math:`B_q \to V` decays
=======================================


.. _bmmtok^*cocoabsunhunlongpoq2pc:
.. _bmmtok^*cocoabsunhunparapoq2pc:
.. _bmmtok^*cocoabsunhunperppoq2pc:
.. _bmmtok^*cocoabsunhhatunlongpoq2pc:
.. _bmmtok^*cocoabsunhhatunparapoq2pc:
.. _bmmtok^*cocoabsunhhatunperppoq2pc:
.. _bmmtok^*cocoimunhunlongpoq2pc:
.. _bmmtok^*cocoimunhunparapoq2pc:
.. _bmmtok^*cocoimunhunperppoq2pc:
.. _bmmtok^*cocoreunhunlongpoq2pc:
.. _bmmtok^*cocoreunhunparapoq2pc:
.. _bmmtok^*cocoreunhunperppoq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables



The option "q" selects the spectator quark flavour.



Observables in :math:`B_q \to P charmonium` decays
==================================================


.. _bmmtokcharmoniumcocobranchingunratio:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables



The option "q" selects the spectator quark flavour.



Observables in :math:`B_q \to V charmonium` decays
==================================================


.. _bmmtok^*charmoniumcocosun1cunlhcb:
.. _bmmtok^*charmoniumcocosun1sunlhcb:
.. _bmmtok^*charmoniumcocosun3unlhcb:
.. _bmmtok^*charmoniumcocosun4unlhcb:
.. _bmmtok^*charmoniumcocosun8unlhcb:
.. _bmmtok^*charmoniumcocosun9unlhcb:
.. _bmmtok^*charmoniumcocobranchingunratio:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables



The option "q" selects the spectator quark flavour.



Observables in :math:`\Lambda_b \to \Lambda\ell^+\ell^-` decays
===============================================================


.. _lambdaunbmmtolambdallcocoaunfb^cpoq2pcatlargerecoil:
.. _lambdaunbmmtolambdallcocoaunfb^cpoq2pcatlowrecoil:
.. _lambdaunbmmtolambdallcocoaunfb^catlargerecoil:
.. _lambdaunbmmtolambdallcocoaunfb^catlowrecoil:
.. _lambdaunbmmtolambdallcocoaunfb^hpoq2pcatlargerecoil:
.. _lambdaunbmmtolambdallcocoaunfb^hpoq2pcatlowrecoil:
.. _lambdaunbmmtolambdallcocoaunfb^hatlargerecoil:
.. _lambdaunbmmtolambdallcocoaunfb^hatlowrecoil:
.. _lambdaunbmmtolambdallcocoaunfb^lpoq2pcatlargerecoil:
.. _lambdaunbmmtolambdallcocoaunfb^lpoq2pcatlowrecoil:
.. _lambdaunbmmtolambdallcocoaunfb^latlargerecoil:
.. _lambdaunbmmtolambdallcocoaunfb^latlowrecoil:
.. _lambdaunbmmtolambdallcocobratlargerecoil:
.. _lambdaunbmmtolambdallcocobratlowrecoil:
.. _lambdaunbmmtolambdallcocofun0poq2pcatlargerecoil:
.. _lambdaunbmmtolambdallcocofun0poq2pcatlowrecoil:
.. _lambdaunbmmtolambdallcocofun0atlargerecoil:
.. _lambdaunbmmtolambdallcocofun0atlowrecoil:
.. _lambdaunbmmtolambdallcocokun1catlowrecoil:
.. _lambdaunbmmtolambdallcocokun1ccatlowrecoil:
.. _lambdaunbmmtolambdallcocokun1ssatlowrecoil:
.. _lambdaunbmmtolambdallcocokun2catlowrecoil:
.. _lambdaunbmmtolambdallcocokun2ccatlowrecoil:
.. _lambdaunbmmtolambdallcocokun2ssatlowrecoil:
.. _lambdaunbmmtolambdallcocokun3satlowrecoil:
.. _lambdaunbmmtolambdallcocokun3scatlowrecoil:
.. _lambdaunbmmtolambdallcocokun4satlowrecoil:
.. _lambdaunbmmtolambdallcocokun4scatlowrecoil:
.. _lambdaunbmmtolambdallcocomun10atlowrecoil:
.. _lambdaunbmmtolambdallcocomun11atlowrecoil:
.. _lambdaunbmmtolambdallcocomun12atlowrecoil:
.. _lambdaunbmmtolambdallcocomun13atlowrecoil:
.. _lambdaunbmmtolambdallcocomun14atlowrecoil:
.. _lambdaunbmmtolambdallcocomun15atlowrecoil:
.. _lambdaunbmmtolambdallcocomun16atlowrecoil:
.. _lambdaunbmmtolambdallcocomun17atlowrecoil:
.. _lambdaunbmmtolambdallcocomun18atlowrecoil:
.. _lambdaunbmmtolambdallcocomun19atlowrecoil:
.. _lambdaunbmmtolambdallcocomun1atlowrecoil:
.. _lambdaunbmmtolambdallcocomun20atlowrecoil:
.. _lambdaunbmmtolambdallcocomun21atlowrecoil:
.. _lambdaunbmmtolambdallcocomun22atlowrecoil:
.. _lambdaunbmmtolambdallcocomun23atlowrecoil:
.. _lambdaunbmmtolambdallcocomun24atlowrecoil:
.. _lambdaunbmmtolambdallcocomun25atlowrecoil:
.. _lambdaunbmmtolambdallcocomun26atlowrecoil:
.. _lambdaunbmmtolambdallcocomun27atlowrecoil:
.. _lambdaunbmmtolambdallcocomun28atlowrecoil:
.. _lambdaunbmmtolambdallcocomun29atlowrecoil:
.. _lambdaunbmmtolambdallcocomun2atlowrecoil:
.. _lambdaunbmmtolambdallcocomun30atlowrecoil:
.. _lambdaunbmmtolambdallcocomun31atlowrecoil:
.. _lambdaunbmmtolambdallcocomun32atlowrecoil:
.. _lambdaunbmmtolambdallcocomun33atlowrecoil:
.. _lambdaunbmmtolambdallcocomun34atlowrecoil:
.. _lambdaunbmmtolambdallcocomun3atlowrecoil:
.. _lambdaunbmmtolambdallcocomun4atlowrecoil:
.. _lambdaunbmmtolambdallcocomun5atlowrecoil:
.. _lambdaunbmmtolambdallcocomun6atlowrecoil:
.. _lambdaunbmmtolambdallcocomun7atlowrecoil:
.. _lambdaunbmmtolambdallcocomun8atlowrecoil:
.. _lambdaunbmmtolambdallcocomun9atlowrecoil:
.. _lambdaunbmmtolambdallcocorunlambdaatlargerecoil:
.. _lambdaunbmmtolambdallcocodbrsldq2atlargerecoil:
.. _lambdaunbmmtolambdallcocodbrsldq2atlowrecoil:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``Lambda_b->Lambdall::A_FB^c@LargeRecoil``
     - :math:`A_\text{FB}^{h,\ell}(\Lambda_b\to\Lambda\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::A_FB^c@LowRecoil``
     - :math:`A_\text{FB}^{h,\ell}(\Lambda_b\to\Lambda\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::A_FB^h@LargeRecoil``
     - :math:`A_\text{FB}^h(\Lambda_b\to\Lambda\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::A_FB^h@LowRecoil``
     - :math:`A_\text{FB}^h(\Lambda_b\to\Lambda\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::A_FB^l@LargeRecoil``
     - :math:`A_\text{FB}^\ell(\Lambda_b\to\Lambda\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::A_FB^l@LowRecoil``
     - :math:`A_\text{FB}^\ell(\Lambda_b\to\Lambda\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::BR@LargeRecoil``
     - :math:`\mathcal{B}(\Lambda_b\to\Lambda\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::BR@LowRecoil``
     - :math:`\mathcal{B}(\Lambda_b\to\Lambda\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::F_0@LargeRecoil``
     - :math:`F_0(\Lambda_b\to\Lambda\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::F_0@LowRecoil``
     - :math:`F_0(\Lambda_b\to\Lambda\ell^+\ell^-)`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_10@LowRecoil``
     - :math:`M_{10}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_11@LowRecoil``
     - :math:`M_{11}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_12@LowRecoil``
     - :math:`M_{12}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_13@LowRecoil``
     - :math:`M_{13}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_14@LowRecoil``
     - :math:`M_{14}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_15@LowRecoil``
     - :math:`M_{15}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_16@LowRecoil``
     - :math:`M_{16}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_17@LowRecoil``
     - :math:`M_{17}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_18@LowRecoil``
     - :math:`M_{18}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_19@LowRecoil``
     - :math:`M_{19}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_1@LowRecoil``
     - :math:`M_1`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_20@LowRecoil``
     - :math:`M_{20}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_21@LowRecoil``
     - :math:`M_{21}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_22@LowRecoil``
     - :math:`M_{22}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_23@LowRecoil``
     - :math:`M_{23}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_24@LowRecoil``
     - :math:`M_{24}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_25@LowRecoil``
     - :math:`M_{25}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_26@LowRecoil``
     - :math:`M_{26}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_27@LowRecoil``
     - :math:`M_{27}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_28@LowRecoil``
     - :math:`M_{28}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_29@LowRecoil``
     - :math:`M_{29}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_2@LowRecoil``
     - :math:`M_2`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_30@LowRecoil``
     - :math:`M_{30}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_31@LowRecoil``
     - :math:`M_{31}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_32@LowRecoil``
     - :math:`M_{32}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_33@LowRecoil``
     - :math:`M_{33}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_34@LowRecoil``
     - :math:`M_{34}`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_3@LowRecoil``
     - :math:`M_3`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_4@LowRecoil``
     - :math:`M_4`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_5@LowRecoil``
     - :math:`M_5`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_6@LowRecoil``
     - :math:`M_6`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_7@LowRecoil``
     - :math:`M_7`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_8@LowRecoil``
     - :math:`M_8`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::M_9@LowRecoil``
     - :math:`M_9`
     - ``q2_min``, ``q2_max``
   * - ``Lambda_b->Lambdall::R_Lambda@LargeRecoil``
     - :math:`R_{\Lambda}(q^2)`
     - ``q2_mu_min``, ``q2_mu_max``
   * - ``Lambda_b->Lambdall::dBR/dq2@LargeRecoil``
     - :math:`d\mathcal{B}(\Lambda_b\to\Lambda\ell^+\ell^-)/dq^2`
     - ``q2``
   * - ``Lambda_b->Lambdall::dBR/dq2@LowRecoil``
     - :math:`d\mathcal{B}(\Lambda_b\to\Lambda\ell^+\ell^-)/dq^2`
     - ``q2``



The option "l" selects the charged lepton flavour.



Observables in :math:`B \to X_s \lbrace \gamma, \ell^+\ell^-\rbrace` decays
===========================================================================


.. _bmmtoxunsgammacocobrpoeunminpcatnlo:
.. _bmmtoxunsgammacocobratminimal:
.. _bmmtoxunsgammacocoeun1poeunminpcatnlo:
.. _bmmtoxunsgammacocoeun2poeunminpcatnlo:
.. _bmmtoxunsllcocobrathlmw2005:
.. _bmmtoxunsllcocodbrsldq2athlmw2005:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables



The option "l" selects the charged lepton flavour. The option "q" selects the spectator quark flavour.






************
Form factors
************
Form factors for :math:`B\to \pi` transitions
=============================================


.. _bmmtopicocomunbposvzpcatdkmmo2008:
.. _bmmtopicocomunbpofunpp,lcsrpcatdkmmo2008:
.. _bmmtopicocomunbpofun0,lcsrpcatdkmmo2008:
.. _bmmtopicocomunbpofunt,lcsrpcatdkmmo2008:
.. _bmmtopicocofunpp''poq2pc:
.. _bmmtopicocofunpp'poq2pc:
.. _bmmtopicocofunpppoq2pc:
.. _bmmtopicocofunpp[s^1sls^0]poq2pc:
.. _bmmtopicocofunmmpoq2pc:
.. _bmmtopicocofun0poq2pc:
.. _bmmtopicocofun0poq2pcslfunpppoq2pc:
.. _bmmtopicocofun0[s^1sls^0]poq2pc:
.. _bmmtopicocofunbatdkmmo2008:
.. _bmmtopicocofuntpoq2pc:
.. _bmmtopicocofunt[s^1sls^0]poq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B->pi::f_+''(q2)``
     - :math:`f_+^{'',B\to\pi}(q^2)`
     - ``q2``
   * - ``B->pi::f_+'(q2)``
     - :math:`f_+^{',B\to\pi}(q^2)`
     - ``q2``
   * - ``B->pi::f_+(q2)``
     - :math:`f_+^{B\to\pi}(q^2)`
     - ``q2``
   * - ``B->pi::f_-(q2)``
     - :math:`f_-^{B\to\pi}(q^2)`
     - ``q2``
   * - ``B->pi::f_0(q2)``
     - :math:`f_0^{B\to\pi}(q^2)`
     - ``q2``
   * - ``B->pi::f_T(q2)``
     - :math:`f_T^{B\to\pi}(q^2)`
     - ``q2``



Pseudo observables representing the full basis of :math:`B\to \pi` form factors. The specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`B\to K` transitions
===========================================


.. _bmmtokcocofunpppoq2pc:
.. _bmmtokcocofunpp[s^1sls^0]poq2pc:
.. _bmmtokcocofunmmpoq2pc:
.. _bmmtokcocofun0poq2pc:
.. _bmmtokcocofun0[s^1sls^0]poq2pc:
.. _bmmtokcocofuntpoq2pc:
.. _bmmtokcocofunt[s^1sls^0]poq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B->K::f_+(q2)``
     - :math:`f_+^{B\to K}(q^2)`
     - ``q2``
   * - ``B->K::f_-(q2)``
     - :math:`f_-^{B\to K}(q^2)`
     - ``q2``
   * - ``B->K::f_0(q2)``
     - :math:`f_0^{B\to K}(q^2)`
     - ``q2``
   * - ``B->K::f_T(q2)``
     - :math:`f_T^{B\to K}(q^2)`
     - ``q2``



Pseudo observables representing the full basis of :math:`B\to K` form factors. The specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`B\to \bar{D}` transitions and related pseudo-observables
================================================================================


.. _bmmtodcocoaun0[sun1]athqe:
.. _bmmtodcocoaun0[vun1]athqe:
.. _bmmtodcocoaun1[sun1]athqe:
.. _bmmtodcocoaun1[vun1]athqe:
.. _bmmtodcocoaun2[sun1]athqe:
.. _bmmtodcocoaun2[vun1]athqe:
.. _bmmtodcocofunpppoq2pc:
.. _bmmtodcocofunpp[s^1sls^0]poq2pc:
.. _bmmtodcocofunmmpoq2pc:
.. _bmmtodcocofun0poq2pc:
.. _bmmtodcocofun0[s^1sls^0]poq2pc:
.. _bmmtodcocofuntpoq2pc:
.. _bmmtodcocofuntpoq2pcslfunpppoq2pc:
.. _bmmtodcocofunt[s^1sls^0]poq2pc:
.. _bmmtod^*cocoaun1slaun0[sun1]athqe:
.. _bmmtod^*cocoaun1slaun0[vun1]athqe:
.. _bmmtod^*cocoaun2slaun0[sun1]athqe:
.. _bmmtod^*cocoaun2slaun0[vun1]athqe:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B->D::a_0[S_1]@HQE``
     - :math:`a_0^{S_1}`
     - 
   * - ``B->D::a_0[V_1]@HQE``
     - :math:`a_0^{V_1}`
     - 
   * - ``B->D::a_1[S_1]@HQE``
     - :math:`a_1^{S_1}`
     - 
   * - ``B->D::a_1[V_1]@HQE``
     - :math:`a_1^{V_1}`
     - 
   * - ``B->D::a_2[S_1]@HQE``
     - :math:`a_2^{S_1}`
     - 
   * - ``B->D::a_2[V_1]@HQE``
     - :math:`a_2^{V_1}`
     - 
   * - ``B->D::f_+(q2)``
     - :math:`f_+^{B\to \bar{D}}(q^2)`
     - ``q2``
   * - ``B->D::f_-(q2)``
     - :math:`f_-^{B\to \bar{D}}(q^2)`
     - ``q2``
   * - ``B->D::f_0(q2)``
     - :math:`f_0^{B\to \bar{D}}(q^2)`
     - ``q2``
   * - ``B->D::f_T(q2)``
     - :math:`f_T^{B\to \bar{D}}(q^2)`
     - ``q2``
   * - ``B->D^*::a_1/a_0[S_1]@HQE``
     - :math:`a_1^{S_1}/a_0^{S_1}`
     - 
   * - ``B->D^*::a_1/a_0[V_1]@HQE``
     - :math:`a_1^{V_1}/a_0^{V_1}`
     - 
   * - ``B->D^*::a_2/a_0[S_1]@HQE``
     - :math:`a_2^{S_1}/a_0^{S_1}`
     - 
   * - ``B->D^*::a_2/a_0[V_1]@HQE``
     - :math:`a_2^{V_1}/a_0^{V_1}`
     - 



Pseudo observables representing the full basis of :math:`B\to\bar{D}` form factors. For most pseudo-observables, the specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`B_s\to \bar{K}` transitions
===================================================


.. _bunsmmtokcocofunpppoq2pc:
.. _bunsmmtokcocofunpp[s^1sls^0]poq2pc:
.. _bunsmmtokcocofunmmpoq2pc:
.. _bunsmmtokcocofun0poq2pc:
.. _bunsmmtokcocofun0[s^1sls^0]poq2pc:
.. _bunsmmtokcocofuntpoq2pc:
.. _bunsmmtokcocofunt[s^1sls^0]poq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B_s->K::f_+(q2)``
     - :math:`f_+^{B_s\to \bar{K}}(q^2)`
     - ``q2``
   * - ``B_s->K::f_-(q2)``
     - :math:`f_-^{B_s\to \bar{K}}(q^2)`
     - ``q2``
   * - ``B_s->K::f_0(q2)``
     - :math:`f_0^{B_s\to \bar{K}}(q^2)`
     - ``q2``
   * - ``B_s->K::f_T(q2)``
     - :math:`f_T^{B_s\to \bar{K}}(q^2)`
     - ``q2``



Pseudo observables representing the full basis of :math:`B_s\to \bar{K}` form factors. The specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`B_s\to \bar{D_s}` transitions
=====================================================


.. _bpounspcmmtodpounspccocofun0poq2unnumpcslfun0poq2undenompc:
.. _bunsmmtodunscocofunpppoq2pc:
.. _bunsmmtodunscocofunpp[s^1sls^0]poq2pc:
.. _bunsmmtodunscocofunmmpoq2pc:
.. _bunsmmtodunscocofun0poq2pc:
.. _bunsmmtodunscocofun0[s^1sls^0]poq2pc:
.. _bunsmmtodunscocofuntpoq2pc:
.. _bunsmmtodunscocofuntpoq2pcslfunpppoq2pc:
.. _bunsmmtodunscocofunt[s^1sls^0]poq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B_s->D_s::f_+(q2)``
     - :math:`f_+^{B_s\to \bar{D}_s}(q^2)`
     - ``q2``
   * - ``B_s->D_s::f_-(q2)``
     - :math:`f_-^{B_s\to \bar{D}_s}(q^2)`
     - ``q2``
   * - ``B_s->D_s::f_0(q2)``
     - :math:`f_0^{B_s\to \bar{D}_s}(q^2)`
     - ``q2``
   * - ``B_s->D_s::f_T(q2)``
     - :math:`f_T^{B_s\to \bar{D}_s}(q^2)`
     - ``q2``



Pseudo observables representing the full basis of :math:`B_s\to\bar{D}_s` form factors. The specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`B\to \rho` transitions
==============================================


.. _bmmtorhococoaun0poq2pc:
.. _bmmtorhococoaun1poq2pc:
.. _bmmtorhococoaun12poq2pc:
.. _bmmtorhococoaun12poq2pcslaun1poq2pc:
.. _bmmtorhococoaun1[s^1sls^0]poq2pc:
.. _bmmtorhococoaun2poq2pc:
.. _bmmtorhococoaun2poq2pcslaun1poq2pc:
.. _bmmtorhococoaun2[s^1sls^0]poq2pc:
.. _bmmtorhococoaun30[s^1sls^0]poq2pc:
.. _bmmtorhococotun1poq2pc:
.. _bmmtorhococotun1[s^1sls^0]poq2pc:
.. _bmmtorhococotun2poq2pc:
.. _bmmtorhococotun23poq2pc:
.. _bmmtorhococotun23poq2pcsltun2poq2pc:
.. _bmmtorhococotun23a[s^1sls^0]poq2pc:
.. _bmmtorhococotun23b[s^1sls^0]poq2pc:
.. _bmmtorhococotun3poq2pc:
.. _bmmtorhococovpoq2pc:
.. _bmmtorhococovpoq2pcslaun1poq2pc:
.. _bmmtorhococov[s^1sls^0]poq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B->rho::A_0(q2)``
     - :math:`A_0^{B\to \rho}(q^2)`
     - ``q2``
   * - ``B->rho::A_1(q2)``
     - :math:`A_1^{B\to \rho}(q^2)`
     - ``q2``
   * - ``B->rho::A_12(q2)``
     - :math:`A_{12}^{B\to \rho}(q^2)`
     - ``q2``
   * - ``B->rho::A_2(q2)``
     - :math:`A_2^{B\to \rho}(q^2)`
     - ``q2``
   * - ``B->rho::T_1(q2)``
     - :math:`T_1^{B\to \rho}(q^2)`
     - ``q2``
   * - ``B->rho::T_2(q2)``
     - :math:`T_2^{B\to \rho}(q^2)`
     - ``q2``
   * - ``B->rho::T_23(q2)``
     - :math:`T_{23}^{B\to \rho}(q^2)`
     - ``q2``
   * - ``B->rho::T_3(q2)``
     - :math:`T_3^{B\to \rho}(q^2)`
     - ``q2``
   * - ``B->rho::V(q2)``
     - :math:`V^{B\to \rho}(q^2)`
     - ``q2``



Pseudo observables representing the full basis of :math:`B\to \rho` form factors. The specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`B\to K^*` transitions
=============================================


.. _bmmtok^*cocoaun0poq2pc:
.. _bmmtok^*cocoaun1poq2pc:
.. _bmmtok^*cocoaun12poq2pc:
.. _bmmtok^*cocoaun12poq2pcslaun1poq2pc:
.. _bmmtok^*cocoaun1[s^1sls^0]poq2pc:
.. _bmmtok^*cocoaun2poq2pc:
.. _bmmtok^*cocoaun2poq2pcslaun1poq2pc:
.. _bmmtok^*cocoaun2[s^1sls^0]poq2pc:
.. _bmmtok^*cocoaun30[s^1sls^0]poq2pc:
.. _bmmtok^*cocotun1poq2pc:
.. _bmmtok^*cocotun1[s^1sls^0]poq2pc:
.. _bmmtok^*cocotun2poq2pc:
.. _bmmtok^*cocotun23poq2pc:
.. _bmmtok^*cocotun23poq2pcsltun2poq2pc:
.. _bmmtok^*cocotun23a[s^1sls^0]poq2pc:
.. _bmmtok^*cocotun23b[s^1sls^0]poq2pc:
.. _bmmtok^*cocotun3poq2pc:
.. _bmmtok^*cocovpoq2pc:
.. _bmmtok^*cocovpoq2pcslaun1poq2pc:
.. _bmmtok^*cocov[s^1sls^0]poq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables



Pseudo observables representing the full basis of :math:`B\to K^*` form factors. The specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`B\to \bar{D}^*` transitions and related pseudo-observables
==================================================================================


.. _bmmtod^*cocoaun0poq2pc:
.. _bmmtod^*cocoaun1poq2pc:
.. _bmmtod^*cocoaun12poq2pc:
.. _bmmtod^*cocoaun12poq2pcslaun1poq2pc:
.. _bmmtod^*cocoaun1[s^1sls^0]poq2pc:
.. _bmmtod^*cocoaun2poq2pc:
.. _bmmtod^*cocoaun2poq2pcslaun1poq2pc:
.. _bmmtod^*cocoaun2[s^1sls^0]poq2pc:
.. _bmmtod^*cocoaun30[s^1sls^0]poq2pc:
.. _bmmtod^*cocotun1poq2pc:
.. _bmmtod^*cocotun1[s^1sls^0]poq2pc:
.. _bmmtod^*cocotun2poq2pc:
.. _bmmtod^*cocotun23poq2pc:
.. _bmmtod^*cocotun23poq2pcsltun2poq2pc:
.. _bmmtod^*cocotun23a[s^1sls^0]poq2pc:
.. _bmmtod^*cocotun23b[s^1sls^0]poq2pc:
.. _bmmtod^*cocotun3poq2pc:
.. _bmmtod^*cocovpoq2pc:
.. _bmmtod^*cocovpoq2pcslaun1poq2pc:
.. _bmmtod^*cocov[s^1sls^0]poq2pc:
.. _bmmtod^*cocoaun0[aun1]athqe:
.. _bmmtod^*cocoaun0[aun5]athqe:
.. _bmmtod^*cocoaun0[pun1]athqe:
.. _bmmtod^*cocoaun0[vun4]athqe:
.. _bmmtod^*cocoaun1slaun0[aun1]athqe:
.. _bmmtod^*cocoaun1slaun0[aun5]athqe:
.. _bmmtod^*cocoaun1slaun0[pun1]athqe:
.. _bmmtod^*cocoaun1slaun0[vun4]athqe:
.. _bmmtod^*cocoaun1[aun1]athqe:
.. _bmmtod^*cocoaun1[aun5]athqe:
.. _bmmtod^*cocoaun1[pun1]athqe:
.. _bmmtod^*cocoaun1[vun4]athqe:
.. _bmmtod^*cocoaun2slaun0[aun1]athqe:
.. _bmmtod^*cocoaun2slaun0[aun5]athqe:
.. _bmmtod^*cocoaun2slaun0[pun1]athqe:
.. _bmmtod^*cocoaun2slaun0[vun4]athqe:
.. _bmmtod^*cocoaun2[aun1]athqe:
.. _bmmtod^*cocoaun2[aun5]athqe:
.. _bmmtod^*cocoaun2[pun1]athqe:
.. _bmmtod^*cocoaun2[vun4]athqe:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B->D^*::a_0[A_1]@HQE``
     - :math:`a_0^{A_1}`
     - 
   * - ``B->D^*::a_0[A_5]@HQE``
     - :math:`a_0^{A_5}`
     - 
   * - ``B->D^*::a_0[P_1]@HQE``
     - :math:`a_0^{P_1}`
     - 
   * - ``B->D^*::a_0[V_4]@HQE``
     - :math:`a_0^{V_4}`
     - 
   * - ``B->D^*::a_1/a_0[A_1]@HQE``
     - :math:`a_1^{A_1}/a_0^{A_1}`
     - 
   * - ``B->D^*::a_1/a_0[A_5]@HQE``
     - :math:`a_1^{A_5}/a_0^{A_5}`
     - 
   * - ``B->D^*::a_1/a_0[P_1]@HQE``
     - :math:`a_1^{P_1}/a_0^{P_1}`
     - 
   * - ``B->D^*::a_1/a_0[V_4]@HQE``
     - :math:`a_1^{V_4}/a_0^{V_4}`
     - 
   * - ``B->D^*::a_1[A_1]@HQE``
     - :math:`a_1^{A_1}`
     - 
   * - ``B->D^*::a_1[A_5]@HQE``
     - :math:`a_1^{A_5}`
     - 
   * - ``B->D^*::a_1[P_1]@HQE``
     - :math:`a_1^{P_1}`
     - 
   * - ``B->D^*::a_1[V_4]@HQE``
     - :math:`a_1^{V_4}`
     - 
   * - ``B->D^*::a_2/a_0[A_1]@HQE``
     - :math:`a_2^{A_1}/a_0^{A_1}`
     - 
   * - ``B->D^*::a_2/a_0[A_5]@HQE``
     - :math:`a_2^{A_5}/a_0^{A_5}`
     - 
   * - ``B->D^*::a_2/a_0[P_1]@HQE``
     - :math:`a_2^{P_1}/a_0^{P_1}`
     - 
   * - ``B->D^*::a_2/a_0[V_4]@HQE``
     - :math:`a_2^{V_4}/a_0^{V_4}`
     - 
   * - ``B->D^*::a_2[A_1]@HQE``
     - :math:`a_2^{A_1}`
     - 
   * - ``B->D^*::a_2[A_5]@HQE``
     - :math:`a_2^{A_5}`
     - 
   * - ``B->D^*::a_2[P_1]@HQE``
     - :math:`a_2^{P_1}`
     - 
   * - ``B->D^*::a_2[V_4]@HQE``
     - :math:`a_2^{V_4}`
     - 



Pseudo observables representing the full basis of :math:`B\to \bar{D}^*` form factors. For most pseudo-observables, the specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`B_s\to \bar{K}^*` transitions
=====================================================


.. _bunsmmtok^*cocoaun0poq2pc:
.. _bunsmmtok^*cocoaun1poq2pc:
.. _bunsmmtok^*cocoaun12poq2pc:
.. _bunsmmtok^*cocoaun12poq2pcslaun1poq2pc:
.. _bunsmmtok^*cocoaun1[s^1sls^0]poq2pc:
.. _bunsmmtok^*cocoaun2poq2pc:
.. _bunsmmtok^*cocoaun2poq2pcslaun1poq2pc:
.. _bunsmmtok^*cocoaun2[s^1sls^0]poq2pc:
.. _bunsmmtok^*cocoaun30[s^1sls^0]poq2pc:
.. _bunsmmtok^*cocotun1poq2pc:
.. _bunsmmtok^*cocotun1[s^1sls^0]poq2pc:
.. _bunsmmtok^*cocotun2poq2pc:
.. _bunsmmtok^*cocotun23poq2pc:
.. _bunsmmtok^*cocotun23poq2pcsltun2poq2pc:
.. _bunsmmtok^*cocotun23a[s^1sls^0]poq2pc:
.. _bunsmmtok^*cocotun23b[s^1sls^0]poq2pc:
.. _bunsmmtok^*cocotun3poq2pc:
.. _bunsmmtok^*cocovpoq2pc:
.. _bunsmmtok^*cocovpoq2pcslaun1poq2pc:
.. _bunsmmtok^*cocov[s^1sls^0]poq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B_s->K^*::A_0(q2)``
     - :math:`A_0^{B_s\to \bar{K}^*}(q^2)`
     - ``q2``
   * - ``B_s->K^*::A_1(q2)``
     - :math:`A_1^{B_s\to \bar{K}^*}(q^2)`
     - ``q2``
   * - ``B_s->K^*::A_12(q2)``
     - :math:`A_{12}^{B_s\to \bar{K}^*}(q^2)`
     - ``q2``
   * - ``B_s->K^*::A_2(q2)``
     - :math:`A_2^{B_s\to \bar{K}^*}(q^2)`
     - ``q2``
   * - ``B_s->K^*::T_1(q2)``
     - :math:`T_1^{B_s\to \bar{K}^*}(q^2)`
     - ``q2``
   * - ``B_s->K^*::T_2(q2)``
     - :math:`T_2^{B_s\to \bar{K}^*}(q^2)`
     - ``q2``
   * - ``B_s->K^*::T_23(q2)``
     - :math:`T_{23}^{B_s\to \bar{K}^*}(q^2)`
     - ``q2``
   * - ``B_s->K^*::T_3(q2)``
     - :math:`T_3^{B_s\to \bar{K}^*}(q^2)`
     - ``q2``
   * - ``B_s->K^*::V(q2)``
     - :math:`V^{B_s\to \bar{K}^*}(q^2)`
     - ``q2``



Pseudo observables representing the full basis of :math:`B_s\to \bar{K}^*` form factors. The specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`B_s\to \phi` transitions
================================================


.. _bunsmmtophicocoaun0poq2pc:
.. _bunsmmtophicocoaun1poq2pc:
.. _bunsmmtophicocoaun12poq2pc:
.. _bunsmmtophicocoaun12poq2pcslaun1poq2pc:
.. _bunsmmtophicocoaun1[s^1sls^0]poq2pc:
.. _bunsmmtophicocoaun2poq2pc:
.. _bunsmmtophicocoaun2poq2pcslaun1poq2pc:
.. _bunsmmtophicocoaun2[s^1sls^0]poq2pc:
.. _bunsmmtophicocoaun30[s^1sls^0]poq2pc:
.. _bunsmmtophicocotun1poq2pc:
.. _bunsmmtophicocotun1[s^1sls^0]poq2pc:
.. _bunsmmtophicocotun2poq2pc:
.. _bunsmmtophicocotun23poq2pc:
.. _bunsmmtophicocotun23poq2pcsltun2poq2pc:
.. _bunsmmtophicocotun23a[s^1sls^0]poq2pc:
.. _bunsmmtophicocotun23b[s^1sls^0]poq2pc:
.. _bunsmmtophicocotun3poq2pc:
.. _bunsmmtophicocovpoq2pc:
.. _bunsmmtophicocovpoq2pcslaun1poq2pc:
.. _bunsmmtophicocov[s^1sls^0]poq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B_s->phi::A_0(q2)``
     - :math:`A_0^{B_s\to \phi}(q^2)`
     - ``q2``
   * - ``B_s->phi::A_1(q2)``
     - :math:`A_1^{B_s\to \phi}(q^2)`
     - ``q2``
   * - ``B_s->phi::A_12(q2)``
     - :math:`A_{12}^{B_s\to \phi}(q^2)`
     - ``q2``
   * - ``B_s->phi::A_2(q2)``
     - :math:`A_2^{B_s\to \phi}(q^2)`
     - ``q2``
   * - ``B_s->phi::T_1(q2)``
     - :math:`T_1^{B_s\to \phi}(q^2)`
     - ``q2``
   * - ``B_s->phi::T_2(q2)``
     - :math:`T_2^{B_s\to \phi}(q^2)`
     - ``q2``
   * - ``B_s->phi::T_23(q2)``
     - :math:`T_{23}^{B_s\to \phi}(q^2)`
     - ``q2``
   * - ``B_s->phi::T_3(q2)``
     - :math:`T_3^{B_s\to \phi}(q^2)`
     - ``q2``
   * - ``B_s->phi::V(q2)``
     - :math:`V^{B_s\to \phi}(q^2)`
     - ``q2``



Pseudo observables representing the full basis of :math:`B_s\to \phi` form factors. The specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`B_s\to \bar{D}_s^*` transitions
=======================================================


.. _bunsmmtoduns^*cocoaun0poq2pc:
.. _bunsmmtoduns^*cocoaun1poq2pc:
.. _bunsmmtoduns^*cocoaun12poq2pc:
.. _bunsmmtoduns^*cocoaun12poq2pcslaun1poq2pc:
.. _bunsmmtoduns^*cocoaun1[s^1sls^0]poq2pc:
.. _bunsmmtoduns^*cocoaun2poq2pc:
.. _bunsmmtoduns^*cocoaun2poq2pcslaun1poq2pc:
.. _bunsmmtoduns^*cocoaun2[s^1sls^0]poq2pc:
.. _bunsmmtoduns^*cocoaun30[s^1sls^0]poq2pc:
.. _bunsmmtoduns^*cocotun1poq2pc:
.. _bunsmmtoduns^*cocotun1[s^1sls^0]poq2pc:
.. _bunsmmtoduns^*cocotun2poq2pc:
.. _bunsmmtoduns^*cocotun23poq2pc:
.. _bunsmmtoduns^*cocotun23poq2pcsltun2poq2pc:
.. _bunsmmtoduns^*cocotun23a[s^1sls^0]poq2pc:
.. _bunsmmtoduns^*cocotun23b[s^1sls^0]poq2pc:
.. _bunsmmtoduns^*cocotun3poq2pc:
.. _bunsmmtoduns^*cocovpoq2pc:
.. _bunsmmtoduns^*cocovpoq2pcslaun1poq2pc:
.. _bunsmmtoduns^*cocov[s^1sls^0]poq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables



Pseudo observables representing the full basis of :math:`B_s\to \bar{D}_s^*` form factors. The specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`B \to \pi \pi` transitions
==================================================


.. _bmmtopipicocoim{funlong}poq2,k2,zpc:
.. _bmmtopipicocoim{funpara}poq2,k2,zpc:
.. _bmmtopipicocoim{funperp}poq2,k2,zpc:
.. _bmmtopipicocoim{funtime}poq2,k2,zpc:
.. _bmmtopipicocoim{res{funlong}}poq2,k2pc:
.. _bmmtopipicocoim{res{funpara}}poq2,k2pc:
.. _bmmtopipicocoim{res{funperp}}poq2,k2pc:
.. _bmmtopipicocoim{res{funtime}}poq2,k2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B->pipi::Im{F_long}(q2,k2,z)``
     - :math:`\text{Im}\,F_0^{B\to \pi\pi}(q^2,k^2,z)`
     - ``q2``, ``k2``, ``z``
   * - ``B->pipi::Im{F_para}(q2,k2,z)``
     - :math:`\text{Im}\,F_\parallel^{B\to \pi\pi}(q^2,k^2,z)`
     - ``q2``, ``k2``, ``z``
   * - ``B->pipi::Im{F_perp}(q2,k2,z)``
     - :math:`\text{Im}\,F_\perp^{B\to \pi\pi}(q^2,k^2,z)`
     - ``q2``, ``k2``, ``z``
   * - ``B->pipi::Im{F_time}(q2,k2,z)``
     - :math:`\text{Im}\,F_t^{B\to \pi\pi}(q^2,k^2,z)`
     - ``q2``, ``k2``, ``z``
   * - ``B->pipi::Im{Res{F_long}}(q2,k2)``
     - :math:`\text{Res}\,\text{Im}\,F_0^{B\to \pi\pi}(q^2,k^2,z)`
     - ``q2``, ``k2``
   * - ``B->pipi::Im{Res{F_para}}(q2,k2)``
     - :math:`\text{Res}\,\text{Im}\,F_\parallel^{B\to \pi\pi}(q^2,k^2,z)`
     - ``q2``, ``k2``
   * - ``B->pipi::Im{Res{F_perp}}(q2,k2)``
     - :math:`\text{Res}\,\text{Im}\,F_\perp^{B\to \pi\pi}(q^2,k^2,z)`
     - ``q2``, ``k2``
   * - ``B->pipi::Im{Res{F_time}}(q2,k2)``
     - :math:`\text{Res}\,\text{Im}\,F_t^{B\to \pi\pi}(q^2,k^2,z)`
     - ``q2``, ``k2``



Pseudo observables representing the :math:`B \to \pi \pi` form factors. The specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`\Lambda_b \to \Lambda` transitions
==========================================================


.. _lambdaunbmmtolambdacocofunlong^apoq2pc:
.. _lambdaunbmmtolambdacocofunlong^tpoq2pc:
.. _lambdaunbmmtolambdacocofunlong^t5poq2pc:
.. _lambdaunbmmtolambdacocofunlong^vpoq2pc:
.. _lambdaunbmmtolambdacocofunperp^apoq2pc:
.. _lambdaunbmmtolambdacocofunperp^tpoq2pc:
.. _lambdaunbmmtolambdacocofunperp^t5poq2pc:
.. _lambdaunbmmtolambdacocofunperp^vpoq2pc:
.. _lambdaunbmmtolambdacocofuntime^apoq2pc:
.. _lambdaunbmmtolambdacocofuntime^vpoq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``Lambda_b->Lambda::f_long^A(q2)``
     - :math:`f_0^{A,\Lambda_b\to\Lambda}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda::f_long^T(q2)``
     - :math:`f_0^{T,\Lambda_b\to\Lambda}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda::f_long^T5(q2)``
     - :math:`f_0^{T5,\Lambda_b\to\Lambda}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda::f_long^V(q2)``
     - :math:`f_0^{V,\Lambda_b\to\Lambda}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda::f_perp^A(q2)``
     - :math:`f_\perp^{A,\Lambda_b\to\Lambda}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda::f_perp^T(q2)``
     - :math:`f_\perp^{T,\Lambda_b\to\Lambda}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda::f_perp^T5(q2)``
     - :math:`f_\perp^{T5,\Lambda_b\to\Lambda}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda::f_perp^V(q2)``
     - :math:`f_\perp^{V,\Lambda_b\to\Lambda}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda::f_time^A(q2)``
     - :math:`f_t^{A,\Lambda_b\to\Lambda}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda::f_time^V(q2)``
     - :math:`f_t^{V,\Lambda_b\to\Lambda}(q^2)`
     - ``q2``



Pseudo observables representing the full basis of :math:`\Lambda_b \to \Lambda` form factors. The specific parametrization can be chosen via the "form-factors" option.



Form factors for :math:`\Lambda_b \to \Lambda_c` transitions
============================================================


.. _lambdaunbmmtolambdaunccocofpo1pc:
.. _lambdaunbmmtolambdaunccocofuninelpo1pc:
.. _lambdaunbmmtolambdaunccocogpo1pc:
.. _lambdaunbmmtolambdaunccocoguninelpo1pc:
.. _lambdaunbmmtolambdaunccocofunlong^apoq2pc:
.. _lambdaunbmmtolambdaunccocofunlong^tpoq2pc:
.. _lambdaunbmmtolambdaunccocofunlong^t5poq2pc:
.. _lambdaunbmmtolambdaunccocofunlong^vpoq2pc:
.. _lambdaunbmmtolambdaunccocofunperp^apoq2pc:
.. _lambdaunbmmtolambdaunccocofunperp^tpoq2pc:
.. _lambdaunbmmtolambdaunccocofunperp^t5poq2pc:
.. _lambdaunbmmtolambdaunccocofunperp^vpoq2pc:
.. _lambdaunbmmtolambdaunccocofuntime^apoq2pc:
.. _lambdaunbmmtolambdaunccocofuntime^vpoq2pc:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``Lambda_b->Lambda_c::f_long^A(q2)``
     - :math:`f_0^{A,\Lambda_b\to\Lambda_c}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_c::f_long^T(q2)``
     - :math:`f_0^{T,\Lambda_b\to\Lambda_c}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_c::f_long^T5(q2)``
     - :math:`f_0^{T5,\Lambda_b\to\Lambda_c}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_c::f_long^V(q2)``
     - :math:`f_0^{V,\Lambda_b\to\Lambda_c}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_c::f_perp^A(q2)``
     - :math:`f_\perp^{A,\Lambda_b\to\Lambda_c}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_c::f_perp^T(q2)``
     - :math:`f_\perp^{T,\Lambda_b\to\Lambda_c}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_c::f_perp^T5(q2)``
     - :math:`f_\perp^{T5,\Lambda_b\to\Lambda_c}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_c::f_perp^V(q2)``
     - :math:`f_\perp^{V,\Lambda_b\to\Lambda_c}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_c::f_time^A(q2)``
     - :math:`f_t^{A,\Lambda_b\to\Lambda_c}(q^2)`
     - ``q2``
   * - ``Lambda_b->Lambda_c::f_time^V(q2)``
     - :math:`f_t^{V,\Lambda_b\to\Lambda_c}(q^2)`
     - ``q2``



Pseudo observables representing the full basis of :math:`\Lambda_b \to \Lambda_c` form factors. The specific parametrization can be chosen via the "form-factors" option.



Unitarity Bounds
================


.. _bmmtoccocobound[0^pp]atbgl:
.. _bmmtoccocobound[0^pp]atcln:
.. _bmmtoccocobound[0^pp]atope:
.. _bmmtoccocobound[0^mm]atbgl:
.. _bmmtoccocobound[0^mm]atcln:
.. _bmmtoccocobound[0^mm]atope:
.. _bmmtoccocobound[1^pp]atbgl:
.. _bmmtoccocobound[1^pp]atcln:
.. _bmmtoccocobound[1^pp]atope:
.. _bmmtoccocobound[1^mm]atbgl:
.. _bmmtoccocobound[1^mm]atcln:
.. _bmmtoccocobound[1^mm]atope:
.. _bmmtoccocoprior[0^pp]atbgl:
.. _bmmtoccocoprior[0^pp]atcln:
.. _bmmtoccocoprior[0^mm]atbgl:
.. _bmmtoccocoprior[0^mm]atcln:
.. _bmmtoccocoprior[1^pp]atbgl:
.. _bmmtoccocoprior[1^pp]atcln:
.. _bmmtoccocoprior[1^mm]atbgl:
.. _bmmtoccocoprior[1^mm]atcln:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``b->c::Bound[0^+]@BGL``
     - :math:`B^{b\to c}_{0^+}`
     - 
   * - ``b->c::Bound[0^+]@CLN``
     - :math:`B^{b\to c}_{0^+}`
     - 
   * - ``b->c::Bound[0^+]@OPE``
     - :math:`B^{b\to c}_{0^+}`
     - 
   * - ``b->c::Bound[0^-]@BGL``
     - :math:`B^{b\to c}_{0^-}`
     - 
   * - ``b->c::Bound[0^-]@CLN``
     - :math:`B^{b\to c}_{0^-}`
     - 
   * - ``b->c::Bound[0^-]@OPE``
     - :math:`B^{b\to c}_{0^-}`
     - 
   * - ``b->c::Bound[1^+]@BGL``
     - :math:`B^{b\to c}_{1^+}`
     - 
   * - ``b->c::Bound[1^+]@CLN``
     - :math:`B^{b\to c}_{1^+}`
     - 
   * - ``b->c::Bound[1^+]@OPE``
     - :math:`B^{b\to c}_{1^+}`
     - 
   * - ``b->c::Bound[1^-]@BGL``
     - :math:`B^{b\to c}_{1^-}`
     - 
   * - ``b->c::Bound[1^-]@CLN``
     - :math:`B^{b\to c}_{1^-}`
     - 
   * - ``b->c::Bound[1^-]@OPE``
     - :math:`B^{b\to c}_{1^-}`
     - 
   * - ``b->c::Prior[0^+]@BGL``
     - :math:`B^{b\to c}_{0^+}`
     - 
   * - ``b->c::Prior[0^+]@CLN``
     - :math:`B^{b\to c}_{0^+}`
     - 
   * - ``b->c::Prior[0^-]@BGL``
     - :math:`B^{b\to c}_{0^-}`
     - 
   * - ``b->c::Prior[0^-]@CLN``
     - :math:`B^{b\to c}_{0^-}`
     - 
   * - ``b->c::Prior[1^+]@BGL``
     - :math:`B^{b\to c}_{1^+}`
     - 
   * - ``b->c::Prior[1^+]@CLN``
     - :math:`B^{b\to c}_{1^+}`
     - 
   * - ``b->c::Prior[1^-]@BGL``
     - :math:`B^{b\to c}_{1^-}`
     - 
   * - ``b->c::Prior[1^-]@CLN``
     - :math:`B^{b\to c}_{1^-}`
     - 



Pseudo observables arising in the various unitarity bounds for :math:`b\to c` semileptonic form factors.



Heavy Quark Expansion
=====================


.. _bunqpo*pcmmtodunqpo*pccocorpoxi'pcathqet:
.. list-table::
   :widths: 50, 25, 25
   :header-rows: 1

   * - Qualified Name
     - Description
     - Kinematic Variables
   * - ``B_q(*)->D_q(*)::R(xi')@HQET``
     - :math:`\xi^\prime_{s}(1)/\xi^\prime(1)`
     - 



Pseudo observables for the parameters of the heavy-quark expansion in exclusive :math:`b\to c` semileptonic form factors









